LPS-55599 Fix CSS alignment bug

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -118,6 +118,17 @@
 	}
 }
 
+.form-builder-field {
+	border-radius: 0;
+	border-width: 0;
+	box-shadow: none;
+	margin: 0;
+	
+	label {
+		float: none;
+	}
+}
+
 .lfr-ddl-field-settings-modal.form-builder-field-settings {
 	width: 720px;
 
